# mcp-agnostics

./: .gitignore  README.md  TROUBLESHOOTING.md
BeamSimMcp/: README.md  pyproject.toml  server.py  simulation.py  storage.py
EnterpriseNotesMcp/: Dockerfile  EnterpriseNotesMcp.csproj  Program.cs  README.md  docker-compose.yml
EnterpriseNotesMcp/Controllers/: McpController.cs
EnterpriseNotesMcp/Examples/: McpClient.cs
EnterpriseNotesMcp/Middleware/: McpAuthMiddleware.cs
EnterpriseNotesMcp/Models/: McpProtocol.cs  Note.cs
EnterpriseNotesMcp/Services/: IMcpHandler.cs  INoteService.cs  McpHandler.cs  NoteService.cs
EnterpriseNotesMcp/Storage/: INoteRepository.cs  JsonFileNoteRepository.cs
EnterpriseNotesMcp/k8s/: deployment.yaml
LocalKnowledgeMcp/: README.md
LocalKnowledgeMcp/src/: index.ts
LocalOpsMcp/: Handlers.cs  LocalOpsMcp.csproj  McpModels.cs  Program.cs  README.md  Storage.cs  notes.json
tool_registry/: README.md  compile_registry.ts  mcp-client-adapter.ts  registry.config.yaml  types.ts
tool_registry/servers/beam-sim/tools/simulate_explain/v1/: tool.yaml
tool_registry/servers/beam-sim/tools/simulate_run/v1/: tool.yaml
tool_registry/servers/enterprise-notes/tools/notes_create/v1/: tool.yaml
tool_registry/servers/enterprise-notes/tools/notes_search/v1/: tool.yaml
tool_registry/servers/enterprise-notes/tools/notes_summarize/v1/: tool.yaml
tool_registry/servers/local-knowledge/tools/docs_ingest/v1/: tool.yaml
tool_registry/servers/local-knowledge/tools/docs_query/v1/: tool.yaml
