[project]
name = "beam-sim-mcp"
version = "0.1.0"
description = "A minimal MCP server for deterministic beam search simulation"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
beam-sim-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
